<resources>
    <string name="app_name">ZeroStudy</string>
    <string name="panel">Panel</string>
    <string name="tab_home">Home</string>
    <string name="tab_editor">Editor</string>
    <string name="tab_free_style">FreeStyle</string>
    <string name="tab_setting">Setting</string>
    <string name="launcher_text">Loading…</string>
    <string name="endpoint_list">EndPoint List</string>
    <string name="setting_language">Language</string>
    <string name="next">Next</string>
    <string name="usa">USA</string>
    <string name="take_photo">TakePhoto</string>
    <string name="take_album">TakeAlbum</string>
    <string name="take_video">TakeVideo</string>
    <string name="find_the_switch_and_turn_it_on">Find the switch and turn it on</string>
    <string name="not_allowed">Not Allowed</string>
    <string name="guide_item_one">Guide Title</string>
    <string name="tab_item_write">Write</string>
    <string name="tab_item_read">Read</string>
    <string name="content">
        草帽主要是节流厉害，开源一般般，真正算得上开源的只有空岛带来的财宝、恐怖岛带走的财宝和罗宾上船给的财宝（你看我连这个都算进去了）\n\n

        吃的他们可以打海王类打鱼什么的，下鱼人岛时候看三大主力的反应明显没少打鱼，而且虽然弗兰奇给阳光号准备了超大冰箱，
        但那点容量还不够路飞一顿\n\n

        的想养活路飞吗，想要的话可以全部教你，去找吧，我把养活他的方法放在大海里，
        于是所有的男子汉航向伟大航道干掉海王类，让白星进入无兵可用时代\n\n

        真正大头的支出是弗兰奇修理船只用的木材和乔巴治疗用的药品，
        阳光号虽然新新的，但那是弗兰奇手工好，他自己也说了，他的梦之船航行到大海尽头以后会破破烂烂的，修理船用的木材不是小数，
        恐怖岛他随随便便就拿出木材，估计存货不少；乔巴就不说了，其中路飞索大为主要用户\n\n

        其他的定期支出还有小乌的研发经费，
        但是材料他都有人工费可以不算；索大保养刀用的毛巾和油，这个不能省但是便宜；布鲁克每天都要喝的牛奶，这个也便宜；
        还有山治的厨具，也很便宜。罗宾娜美不怎么花钱，穷人的孩子早当家\n\n
    </string>
    <string name="dialog_title">Exist App?</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="base_load_success">load success</string>
    <string name="base_load_failed">load failed</string>
    <string name="base_loading">Loading…</string>
    <string name="base_load_retry">Load failed. click to retry!</string>
    <string name="base_load_failed_no_network">Oops, network is lost!  click to retry</string>
    <string name="base_load_empty">Empty!</string>
    <string name="base_progress_text">%d %%</string>
</resources>