<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.AnimationActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_photo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_take_photo"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@mipmap/ic_launcher_foreground" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_take_photo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="15dp"
        android:background="@drawable/shape_background_gradient"
        android:gravity="center"
        android:paddingVertical="15dp"
        android:text="@string/take_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_take_album"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_take_album"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="15dp"
        android:background="@drawable/shape_background_gradient"
        android:gravity="center"
        android:paddingVertical="15dp"
        android:text="@string/take_album"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_take_video"
        app:layout_constraintStart_toEndOf="@+id/tv_take_photo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_take_video"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="15dp"
        android:background="@drawable/shape_background_gradient"
        android:gravity="center"
        android:paddingVertical="15dp"
        android:text="@string/take_video"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_take_album" />
</androidx.constraintlayout.widget.ConstraintLayout>